--- a/package.json
+++ b/package.json
@@ -20,7 +20,17 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@types/crypto-js": "^3.1.43",
+    "@types/elliptic": "^6.4.0",
+    "bootstrap": "^4.1.3",
+    "buffer": "^5.2.1",
     "core-js": "^2.5.4",
+    "crypto-js": "^3.1.9-1",
+    "elliptic": "^6.4.1",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.5",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
